--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "typescript_template_project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "name <example@mail.com>",
+  "description": "Project description.",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "type": "commonjs",
+  "private": true,
+  "license": " PROJECT_LICENSE ",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/.bin/tsc",
-    "doc": "node_modules/.bin/typedoc",
-    "lint": "node_modules/.bin/eslint . --ext ts",
-    "quality": "docker run -d --name sonarqube -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true -p 9000:9000 sonarqube:8.9.9-community"
+    "coverage": "node_modules/.bin/nyc node_modules/.bin/mocha",
+    "doc": "node_modules/.bin/jsdoc --configure .jsdoc.json",
+    "lint": "node_modules/.bin/eslint .",
+    "start": "node dist/src/index.js",
+    "test": "node_modules/.bin/mocha"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
-    "eslint-config-google": "^0.14.0",
-    "typedoc": "^0.23.14",
-    "typescript": "^4.8.3"
+    "@types/mocha": "10.0.0",
+    "@types/sinon": "10.0.13",
+    "@types/ws": "8.5.3",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
+    "eslint": "8.23.1",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-jsdoc": "39.6.2",
+    "jsdoc": "4.0.0",
+    "jsdoc-plugin-typescript": "2.2.0",
+    "mocha": "10.0.0",
+    "nyc": "15.1.0",
+    "sinon": "14.0.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.3"
   }
 }
